fix(app): resolve horizontal scroll issue

--- a/angular-ngrx-scss/src/styles.scss
+++ b/angular-ngrx-scss/src/styles.scss
@@ -1,7 +1,5 @@
 html,
 body {
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   padding: 0;
   font-size: 14px;
